# brave-core

./: DEPS  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: BUILD.gn  brave_settings_strings.grdp  brave_strings.grd  certificate_manager.grdp  generated_resources.grd  generated_resources_override.grd  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  settings_strings_override.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  sources.gni
chromium_src/: check_chromium_src_config.json5
components/: android_system_error_page_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  commerce_strings.grdp  history_strings.grdp  management_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  plus_addresses_strings.grdp  policy_strings.grdp  security_interstitials_strings.grdp
patches/: base-BUILD.gn.patch  base-test-BUILD.gn.patch  base-threading-thread_restrictions.h.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-rust-cargo_crate.gni.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-app-BUILD.gn.patch  chrome-browser-BUILD.gn.patch  (+103 more)
ui/color/: BUILD.gn  missing_color_ref_mixer.cc  missing_color_ref_mixer.h
(+160 files in other folders)
